--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,6 +27,12 @@ jobs:
           root: .
           paths:
             - .
+  test:
+    working_directory: ~/repo
+    - run:
+        name: Test application
+        command: npm run test
+        
   deploy:
     working_directory: ~/repo
     docker:
