--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,9 +32,14 @@ jobs:
     docker:
       - image: circleci/node:12-browsers
     steps:
+      - attach_workspace:
+          at: .
       - run:
-          name: Test application
-          command: npm run test
+          name: Test
+          command: |
+            if [ $CIRCLE_BRANCH = 'circleci-project-setup' ]; then
+              npm run test
+            fi
 
   deploy:
     working_directory: ~/repo
@@ -50,16 +55,24 @@ jobs:
               aws s3 sync build s3://open-trivia-anthony-nucci --delete --exact-timestamps;
             fi
 workflows:
-  build_and_deploy:
+  build_test_deploy:
     jobs:
       - build:
           filters:
             branches:
               only:
                 - circleci-project-setup
-      - deploy:
+      - test:
           requires:
             - build
+           filters:
+            branches:
+              only:
+                - circleci-project-setup
+                
+      - deploy:
+          requires:
+            - test
           filters:
             branches:
               only:
