--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,8 @@ jobs:
     docker:
       - image: circleci/node:12-browsers
     steps:
-      - checkout
+      - checkout:
+        path: ~/open_triviaa/client
       - restore_cache:
           keys:
             - v1-dependencies-{{ checksum "package-lock.json" }}
@@ -32,6 +33,8 @@ jobs:
     docker:
       - image: circleci/node:12-browsers
     steps:
+      - checkout:
+        path: ~/open_triviaa/client
       - attach_workspace:
           at: .
       - run:
@@ -46,6 +49,8 @@ jobs:
     docker:
       - image: innovatorjapan/awscli:latest
     steps:
+      - checkout:
+        path: ~/open_triviaa/client
       - attach_workspace:
           at: .
       - run:
