--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -42,7 +42,7 @@ jobs:
             fi
 
   deploy:
-    working_directory: client
+    working_directory: ~/repo/client
     docker:
       - image: innovatorjapan/awscli:latest
     steps:
