--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -49,8 +49,10 @@ jobs:
       - attach_workspace:
           at: .
       - run:
+        name: Enter Client
+        command: cd .\client\
+      - run:
           name: Deploy
-          command: cd .\client\
           command: |
             if [ $CIRCLE_BRANCH = 'circleci-project-setup' ]; then
               aws s3 sync build s3://open-trivia-anthony-nucci --delete --exact-timestamps;
